--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ bin
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+output.png
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+.DS_Store
